# Stellar-Duels

./: .contract_id  Cargo.toml  LIVE_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  temp_commits.json
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  QUICKSTART.md
scripts/: build.ps1  check_setup.ps1  deploy.ps1  play_game.ps1  register_player.ps1
scripts/utils/: generate_commitment.js  quick_commit.js
src/: lib.rs
